fix spacing of chat messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -341,13 +341,13 @@ input {
 
 .chat-container {
   height: 80dvh;
-  margin: 10dvh 0;
+  margin: 5dvh 0 0 0;
   box-sizing: border-box;
 }
 
 /* Fallback for older browsers */
 @supports not (height: 1dvh) {
-  .chat-container { height: 80vh; margin: 10vh 0; }
+  .chat-container { height: 80vh; margin: 5vh 0 0 0; }
 }
 .split-sidebar {
   width: 20%;
